--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/ahijaouy/Horizons-Slackbot#readme",
   "dependencies": {
+    "@slack/client": "^3.10.0",
+    "express": "^4.15.3",
     "nodemon": "^1.11.0"
   }
 }
